# apm_pybind

./: CMakeLists.txt  Makefile  README.md
src/: audio_processing_module.cc  audio_processing_module.h  example.cc
